--- a/donate.html
+++ b/donate.html
@@ -125,6 +125,13 @@
             padding: 5px 10px;
             border-radius: 10px;
             background-color: rgba(255, 255, 255, 0.601);
+            transition: all 250ms;
+        }
+
+        #donate_btn:hover{
+            transform: scale(1.10);
+            background-color: rgb(246, 133, 99);
+            color: rgb(88, 246, 251);
         }
 
         /* Media query */
