--- a/donate.html
+++ b/donate.html
@@ -123,6 +123,7 @@
         #donate_btn{
             font-size: 30px;
             padding: 5px 10px;
+            border: none;
             border-radius: 10px;
             background-color: rgba(255, 255, 255, 0.601);
             transition: all 250ms;
